Server lobby classes.

--- a/report/Technical documentation/servidor.tex
+++ b/report/Technical documentation/servidor.tex
@@ -1,10 +1,10 @@
-Continuando con la descripción de los módulos, se verá ahora en detalle el servidor. Este comienza creando \emph{GameLobby}, que se e encargará de aceptar conexiones que se realicen con el servidor, creando un \emph{GameLobbyAssistant} para cada uno. Esta clase recibirá los comandos que realice el cliente luego de haber tenido una conexión exitosa. Las opciones que puede realizar son crear una partida, obtener los niveles disponibles, ingresar a una partida creada y obtener una lista de partidas creadas. Todo esto sucede en  \emph{threads} separados. Tanto el GameLobby como cada GameLobbyAssistant realizan sus tareas en hilos separados, el primero para poder aceptar clientes y dejar el hilo principal para recibir el comando por \emph{stdin} necesario para comenzar el proceso de cerrado ordenado del servidor, y los segundos para que el primero pueda aceptar sin rechazar conexiones durante el lapso que el cliente tarda en comenzar una partida.\\
-\indent Cuando un cliente decide crear una partida, se creará una nueva instancia de la clase \emph{Lobby}, por medio del uso de la clase \emph{Lobbies}. La clase Lobbies es una clase de importancia ya que es el \emph{recurso compartido} que relaciona todas las conexiones que se realicen al servidor. En esta se guardan todas las partidas creadas. Dado que varios clientes distintos podrían querer conectarse a la misma sala de juego, esta también posee una \emph{race condition} que debe ser tenida en cuenta. Lobbies opera como un \emph{monitor}, que realiza las operaciones de crear partida, unirse a una partida y obtener los juegos creados de forma atómica. Para esto, dispone de un mutex de protección. Lobbies posee internamente un arreglo de \emph{Lobby}, que tiene un registro de los clientes. Cuando la sala se completa, notifica al GameLobby que la partida puede comenzar. Este inmediatamente dota al Lobby de los sockets de cada cliente, para que este pueda iniciar en un hilo propio la partida. Es en este momento también que sucede la finalización de los GameLobbyAssistant involucrados. La liberación de los recursos de estas instancias (su destrucción), la realiza el GameLobby, quien revisa luego de aceptar una conexión  todos los hilos que terminaron, aplicando su correspondiente \emph{join} y su destrucción.\\
-\indent La partida transcurre en la clase \emph{Game}. Esta fue pensada en un principio como una clase que iba a heredar de Thread, sin embargo, se delegó esa herencia en el Lobby que lo contiene. En esta clase se creará el mundo físico y se recibirán las interacciones que tenga el usuario con el cliente, para modificar este mundo en la medida de lo posible.\\
-\indent Una vez que el juego termina, ya sea porque terminó normalmente, o porque quedó un solo jugador conectado, se debe proceder a realizar un \emph{join} del hilo. De esto se encarga el\emph{LobbyJoiner}. Este proceso, que opera en un hilo aparte, se encarga de iterar sobre los Lobby terminados, para realizar un join y eliminarlo del arreglo. A primera vista, pareciera que este ciclo ocurre indefinidamente, pudiendo consumir una cantidad de recursos considerable de la computadora. Sin embargo, el GameLobby se comunica con esta clase mediante una cola bloqueante. Esta le manda mensajes al LobbyJoiner cuando una partida termina, para que este se active y libere el recurso.
+Continuando con la descripción de los módulos, se verá ahora en detalle el servidor. Este comienza creando \textit{\emph{GameLobby}}, que se encargará de aceptar conexiones que se realicen con el servidor, creando un \textit{\emph{GameLobbyAssistant}} para cada uno. Esta clase recibirá los comandos que envíe el cliente luego de haber tenido una conexión exitosa. Las opciones que puede realizar son crear una partida, obtener los niveles disponibles, ingresar a una partida creada y obtener una lista de partidas creadas. Todo esto sucede en  \textit{\emph{threads}} separados. Tanto el \textit{GameLobby} como cada \textit{GameLobbyAssistant} realizan sus tareas en hilos separados, el primero para poder aceptar clientes y dejar el hilo principal para recibir el comando por \textit{\emph{stdin}} necesario para comenzar el proceso de cerrado ordenado del servidor, y los segundos para que el primero pueda aceptar sin rechazar conexiones durante el lapso que el cliente tarda en comenzar una partida.\\
+\indent Cuando un cliente decide crear una partida, se creará una nueva instancia de la clase \textit{\emph{Lobby}}, por medio del uso de la clase \textit{\emph{Lobbies}}. La clase \textit{Lobbies} es una clase de importancia ya que es el \emph{recurso compartido} que relaciona todas las conexiones que se realicen al servidor. En esta se guardan todas las partidas creadas. Dado que varios clientes distintos podrían querer conectarse a la misma sala de juego, esta también posee una \textit{\emph{race condition}} que debe ser tenida en cuenta. \textit{Lobbies} opera como un \emph{monitor}, que realiza las operaciones de crear partida, unirse a una partida y obtener los juegos creados de forma atómica. Para esto, dispone de un \textit{mutex} de protección. \textit{Lobbies} posee internamente un arreglo de \textit{\emph{Lobby}}, que tiene un registro de los clientes. Cuando la sala se completa, notifica al \textit{GameLobby} que la partida puede comenzar. Este inmediatamente dota al \textit{Lobby} de los \textit{sockets} de cada cliente, para que este pueda iniciar en un hilo propio la partida. Es en este momento también que sucede la finalización de los \textit{GameLobbyAssistant} involucrados. La liberación de los recursos de estas instancias (su destrucción), la realiza el \textit{GameLobby}, quien revisa luego de aceptar una conexión todos los hilos que terminaron, aplicando su correspondiente \textit{\emph{join}} y su destrucción.\\
+\indent La partida transcurre en la clase \textit{\emph{Game}}. Esta fue pensada en un principio como una clase que iba a heredar de \textit{Thread}, sin embargo, se delegó esa herencia en el \textit{Lobby} que lo contiene. En esta clase se creará el mundo físico y se recibirán las interacciones que tenga el usuario con el cliente, para modificar este mundo en la medida de lo posible.\\
+\indent Una vez que el juego termina, ya sea porque terminó normalmente, o porque quedó un solo jugador conectado, se debe proceder a realizar un \textit{\emph{join}} del hilo. De esto se encarga el \textit{\emph{LobbyJoiner}}. Este proceso, que opera en un hilo aparte, se encarga de iterar sobre los \textit{Lobby} terminados, para realizar un \textit{join} y eliminarlo del arreglo. A primera vista, pareciera que este ciclo ocurre indefinidamente, pudiendo consumir una cantidad de recursos considerable de la computadora. Sin embargo, el \textit{GameLobby} se comunica con esta clase mediante una cola bloqueante. Esta le manda mensajes al \textit{LobbyJoiner} cuando una partida termina, para que este se active y libere el recurso.
 
 \subsection{Desarrollo del juego}
-Durante el juego, que transcurre en la clase Game, los distintos clientes son tratados con dos hilos para cada uno, uno que se encarga de recibir datos del cliente (por medio del método \emph{inputWorker}) y otro que se encarga de enviarle el estado del juego (por medio del método \emph{outputWorker}). Estos métodos de la instancia Game se encargan de \emph{serializar} y \emph{deserializar} los mensajes que envía y los que recibe del cliente.
+Durante el juego, que transcurre en la clase \textit{Game}, los distintos clientes son tratados con dos hilos para cada uno, uno que se encarga de recibir datos del cliente (por medio del método \textit{\emph{inputWorker}}) y otro que se encarga de enviarle el estado del juego (por medio del método \textit{\emph{outputWorker}}). Estos métodos de la instancia \textit{Game} se encargan de \emph{serializar} y \emph{deserializar} los mensajes que envía y los que recibe del cliente.
 
 \subsection{Clases}
 
@@ -18,6 +18,25 @@ Se describen ahora las clases utilizadas en el servidor.
 	\item \textbf{\textit{ServerInternalAction}}: clase \textit{enum} que posee las acciones que internamente el servidor envía en \textit{GameLobby} a \textit{LobbyJoiner}.
 	
 	\item \textbf{\textit{ServerInternalMsg}}: es una estructura que posee un \textit{ServerInternalAction}. Es un mensaje que envía \textit{GameLobby} a \textit{LobbyJoiner}.
+	
+	\item \textbf{\textit{GameLobby}}: hereda de \textit{Thread} y \textit{Observer}. La explicación de sus tareas se realizó en la descripción del módulo. Se puede agregar que posee los métodos \textit{loadLevels}, que carga recorre el directorio de los niveles cargando su información, y \textit{loadLevel}, que carga la información de un nivel, es decir su archivo de configuración y los fondos ubicados en las direcciones indicadas en el mismo.
+	
+	\item \textbf{\textit{GameLobbyAssistant}}: hereda de \textit{Thread} y \textit{Observer}. La explicación de sus tareas se realizó en la descripción del módulo. Se pueden destacar los métodos que realizan las acciones indicadas por el cliente:
+	\begin{itemize}
+		\item \textit{getLevels}.
+		\item \textit{createGame}.
+		\item \textit{getGames}.
+		\item \textit{joinGame}.
+	\end{itemize}
+	El método \textit{sendLevelFiles} envía al cliente el archivo de configuración y los fondos del nivel correspondiente.
+	
+	\item \textbf{\textit{GamesGetter}}: es un \textit{functor} que mediante el operador \textit{()}, el cual recibe una referencia a \textit{Lobbies}, extrae de este la información que debe enviarse en una estructura \textit{GameInfo} al usuario que quiere unirse a una partida.
+	
+	\item \textbf{\textit{Lobbies}}: posee todos los archivos de configuración y fondos de los niveles. La explicación de sus tareas se realizó en la descripción del módulo. Los métodos que se destacan son \textit{createGame}, que crea una partida, \textit{joinGame}, que se une a una partida, \textit{getGames}, que mediante el \textit{functor} \textit{GamesGetter} obtiene la información de las partidas, \textit{getLevelData}, que devuelve la información de cada nivel en una estructura \textit{LevelData}, y \textit{configure}, que extrae de los archivos de configuración de cada nivel la información para enviar a los clientes cuando estos quieren crear una partida.
+	
+	\item \textbf{\textit{Lobby}}: hereda de \textit{Thread} y \textit{Subject}. La explicación de sus tareas se realizó en la descripción del módulo. se destacan los métodos \textit{joinGame}, mediante el cual un jugador se une a una partida, y \textit{addPlayerSocket}, que recibe el \textit{socket} de un jugador y lo almacena para luego dárselo al juego.
+	
+	\item \textbf{\textit{LobbyJoiner}}: hereda de \textit{Thread}. La explicación de sus tareas se realizó en la descripción del módulo. Se destacan los métodos \textit{handleServerInput}, en el cual se procesa el mensaje recibido en la cola bloqueante por parte del servidor, y \textit{killLobbies}, que frena la ejecución de todos los \textit{lobbies} y los \textit{joinea}.
 	
 	\item \textbf{\textit{Physics}}: maneja la lógica correspondiente a la física del juego. Internamente crea un mundo \textit{b2World} de la biblioteca \textit{Box2D} que es donde estará contenido todo lo que suceda en el juego. Sus métodos son \textit{update}, que actualiza el estado del mundo con el tiempo transcurrido desde la última actualización, y \textit{createBody}, que crea un cuerpo \textit{b2Body} a partir de una definición para el mismo de tipo \textit{b2BodyDef}.
 	
@@ -72,7 +91,7 @@ Se describen ahora las clases utilizadas en el servidor.
 	\item \textbf{\textit{Bullet}}: hereda de \textit{PhysicsEntity} y cuando se construye crea el cuerpo de la bala, que es un círculo de un radio determinado. En el método \textit{startContact} se setea un \textit{flag} que se utiliza para determinar si explotó en el método \textit{hasExploded} (que también chequea si impactó en el agua o si se terminó la cuenta atrás en caso de que la bala posea la propiedad de \textit{timeout}). En el método \textit{update}, si se ejecuta por primera vez se aplica el impulso a la bala proporcionalmente a la potencia de disparo y en la dirección en la que apuntaba el gusano. Luego se aplica la fuerza del viento hasta que explota, que es cuando se notifica al \textit{Game} que explotó, y se destruye el cuerpo.
 
 	\item \textbf{\textit{Weapon}}: es una clase abstracta que encapsula el comportamiento de las armas. Las clases que heredan de esta se construyen en base a una estructura de configuración, el \textit{id} del arma correspondiente y el ángulo en el que está apuntando el gusano (que luego será alterado por los métodos \textit{increaseAngle} y \textit{decreaseAngle}). El método \textit{onExplode} hace lo que necesario cuando la bala disparada hizo impacto, es decir genera fragmentos a partir de esta si el arma así lo requiere y el método \textit{checkBoundaryAngles} evita que los ángulos en que el jugador apunta superen los máximos y mínimos establecidos. El método \textit{positionSelected} se utiliza para lanzar el ataque aéreo, y el método \textit{startShot} setea un \textit{flag} para indicar que debe acumularse potencia de tiro si el arma posee esta habilidad. En el método \textit{update} se acumula dicha potencia en función del tiempo transcurrido, la máxima potencia establecida y el tiempo estipulado para alcanzarla, y cuando es alcanzada, si el jugador aún no disparó, el disparo se realiza automáticamente.\\
-	Esta clase se encuentra contenida en el Player mediante \emph{smart pointers}. El player delega en el estado la respuesta que debe tener ante algún evento de las armas. Solo el estado \emph{Still} aplica las acciones del arma. Esto si bien pareció correcto en un inicio, generó que la clase State sea una especie de "bolsa de gatos". Si bien es cierto que las acciones del arma dependen del estado (no puedo disparar cuando estoy saltando, o caminando, o cayendo), no debería haberse realizado de esta manera. Un refactor posterior podria ser que el estado tenga una función \emph{handleWeaponAction}, y que la clase Still llame las funciones necesarias en el Player. En la figura \ref{im:serverWeapons} puede verse un diagrama de clase que detalla el uso de las armas en el servidor. Las armas implementadas son:
+	Esta clase se encuentra contenida en el \textit{Player} mediante \textit{\emph{smart pointers}}. El player delega en el estado la respuesta que debe tener ante algún evento de las armas. Solo el estado \textit{\emph{Still}} aplica las acciones del arma. Esto si bien pareció correcto en un inicio, generó que la clase \textit{State} sea una especie de ``bolsa de gatos". Si bien es cierto que las acciones del arma dependen del estado (no puedo disparar cuando estoy saltando, o caminando, o cayendo), no debería haberse realizado de esta manera. En un \textit{refactor} posterior podría ser que el estado tenga una función \textit{\emph{handleWeaponAction}}, y que la clase \textit{Still} llame a las funciones necesarias en el \textit{Player}. En la figura \ref{im:serverWeapons} puede verse un diagrama de clase que detalla el uso de las armas en el servidor. Las armas implementadas son:
 
 	\begin{itemize}
 		\item \textbf{\textit{AerialAttack}}.
