--- a/report/Technical documentation/servidor.tex
+++ b/report/Technical documentation/servidor.tex
@@ -1,7 +1,21 @@
 Continuando con la descripción de los módulos, se verá ahora en detalle el servidor. Este comienza creando \textit{\emph{GameLobby}}, que se encargará de aceptar conexiones que se realicen con el servidor, creando un \textit{\emph{GameLobbyAssistant}} para cada uno. Esta clase recibirá los comandos que envíe el cliente luego de haber tenido una conexión exitosa. Las opciones que puede realizar son crear una partida, obtener los niveles disponibles, ingresar a una partida creada y obtener una lista de partidas creadas. Todo esto sucede en  \textit{\emph{threads}} separados. Tanto el \textit{GameLobby} como cada \textit{GameLobbyAssistant} realizan sus tareas en hilos separados, el primero para poder aceptar clientes y dejar el hilo principal para recibir el comando por \textit{\emph{stdin}} necesario para comenzar el proceso de cerrado ordenado del servidor, y los segundos para que el primero pueda aceptar sin rechazar conexiones durante el lapso que el cliente tarda en comenzar una partida.\\
 \indent Cuando un cliente decide crear una partida, se creará una nueva instancia de la clase \textit{\emph{Lobby}}, por medio del uso de la clase \textit{\emph{Lobbies}}. La clase \textit{Lobbies} es una clase de importancia ya que es el \emph{recurso compartido} que relaciona todas las conexiones que se realicen al servidor. En esta se guardan todas las partidas creadas. Dado que varios clientes distintos podrían querer conectarse a la misma sala de juego, esta también posee una \textit{\emph{race condition}} que debe ser tenida en cuenta. \textit{Lobbies} opera como un \emph{monitor}, que realiza las operaciones de crear partida, unirse a una partida y obtener los juegos creados de forma atómica. Para esto, dispone de un \textit{mutex} de protección. \textit{Lobbies} posee internamente un arreglo de \textit{\emph{Lobby}}, que tiene un registro de los clientes. Cuando la sala se completa, notifica al \textit{GameLobby} que la partida puede comenzar. Este inmediatamente dota al \textit{Lobby} de los \textit{sockets} de cada cliente, para que este pueda iniciar en un hilo propio la partida. Es en este momento también que sucede la finalización de los \textit{GameLobbyAssistant} involucrados. La liberación de los recursos de estas instancias (su destrucción), la realiza el \textit{GameLobby}, quien revisa luego de aceptar una conexión todos los hilos que terminaron, aplicando su correspondiente \textit{\emph{join}} y su destrucción.\\
 \indent La partida transcurre en la clase \textit{\emph{Game}}. Esta fue pensada en un principio como una clase que iba a heredar de \textit{Thread}, sin embargo, se delegó esa herencia en el \textit{Lobby} que lo contiene. En esta clase se creará el mundo físico y se recibirán las interacciones que tenga el usuario con el cliente, para modificar este mundo en la medida de lo posible.\\
-\indent Una vez que el juego termina, ya sea porque terminó normalmente, o porque quedó un solo jugador conectado, se debe proceder a realizar un \textit{\emph{join}} del hilo. De esto se encarga el \textit{\emph{LobbyJoiner}}. Este proceso, que opera en un hilo aparte, se encarga de iterar sobre los \textit{Lobby} terminados, para realizar un \textit{join} y eliminarlo del arreglo. A primera vista, pareciera que este ciclo ocurre indefinidamente, pudiendo consumir una cantidad de recursos considerable de la computadora. Sin embargo, el \textit{GameLobby} se comunica con esta clase mediante una cola bloqueante. Esta le manda mensajes al \textit{LobbyJoiner} cuando una partida termina, para que este se active y libere el recurso.
+\indent Una vez que el juego termina, ya sea porque terminó normalmente, o porque quedó un solo jugador conectado, se debe proceder a realizar un \textit{\emph{join}} del hilo. De esto se encarga el \textit{\emph{LobbyJoiner}}. Este proceso, que opera en un hilo aparte, se encarga de iterar sobre los \textit{Lobby} terminados, para realizar un \textit{join} y eliminarlo del arreglo. A primera vista, pareciera que este ciclo ocurre indefinidamente, pudiendo consumir una cantidad de recursos considerable de la computadora. Sin embargo, el \textit{GameLobby} se comunica con esta clase mediante una cola bloqueante. Esta le manda mensajes al \textit{LobbyJoiner} cuando una partida termina, para que este se active y libere el recurso. Un diagrama de secuencia correspondiente al proceso de aceptación de una conexión por parte del \textit{GameLobby} y de la creación de una partida se muestra en la figura \ref{im:secuencia_creacion}, mientras que en la figura \ref{im:secuencia_unirse} se aprecia un diagrama de secuencia del proceso de unirse a una partida y el comienzo de la misma.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{secuencia_creacion}
+	\caption{Diagrama de secuencia de la aceptación de una conexión y la creación de una partida.}
+	\label{im:secuencia_creacion}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{secuencia_unirse}
+	\caption{Diagrama de secuencia del proceso de unirse a una partida y el comienzo de la misma.}
+	\label{im:secuencia_unirse}
+\end{figure}
 
 \subsection{Desarrollo del juego}
 Las partidas las maneja el objeto \texttt{Game}. Al crear el juego, debe recibir los jugadores (sockets) y el
@@ -79,7 +93,7 @@ Se describen ahora las clases utilizadas en el servidor.
 	
 	\item \textbf{\textit{Lobbies}}: posee todos los archivos de configuración y fondos de los niveles. La explicación de sus tareas se realizó en la descripción del módulo. Los métodos que se destacan son \textit{createGame}, que crea una partida, \textit{joinGame}, que se une a una partida, \textit{getGames}, que mediante el \textit{functor} \textit{GamesGetter} obtiene la información de las partidas, \textit{getLevelData}, que devuelve la información de cada nivel en una estructura \textit{LevelData}, y \textit{configure}, que extrae de los archivos de configuración de cada nivel la información para enviar a los clientes cuando estos quieren crear una partida.
 	
-	\item \textbf{\textit{Lobby}}: hereda de \textit{Thread} y \textit{Subject}. La explicación de sus tareas se realizó en la descripción del módulo. se destacan los métodos \textit{joinGame}, mediante el cual un jugador se une a una partida, y \textit{addPlayerSocket}, que recibe el \textit{socket} de un jugador y lo almacena para luego dárselo al juego.
+	\item \textbf{\textit{Lobby}}: hereda de \textit{Thread} y \textit{Subject}. La explicación de sus tareas se realizó en la descripción del módulo. se destacan los métodos \textit{joinGame}, mediante el cual un jugador se une a una partida, y \textit{addPlayerSocket}, que recibe el \textit{socket} de un jugador y lo almacena para luego dárselo al juego. Antes de dar comienzo a este último envía a cada jugador su número de equipo.
 	
 	\item \textbf{\textit{LobbyJoiner}}: hereda de \textit{Thread}. La explicación de sus tareas se realizó en la descripción del módulo. Se destacan los métodos \textit{handleServerInput}, en el cual se procesa el mensaje recibido en la cola bloqueante por parte del servidor, y \textit{killLobbies}, que frena la ejecución de todos los \textit{lobbies} y los \textit{joinea}.
 	
@@ -161,6 +175,8 @@ Se describen ahora las clases utilizadas en el servidor.
 	\item \textbf{\textit{P2PWeapon}}: es una estructura que posee la información de las armas cuerpo a cuerpo (daño que ocasiona, dirección y ángulo en que se la utilizó, y posición al momento de utilizarla).
 	
 	\item \textbf{\textit{Config}}: clase que carga todos los parámetros configurables del juego de su archivo de configuración.
+	
+	\item \textbf{\textit{Game}}: es la clase donde se desarrolla el juego. Maneja la comunicación con todos los clientes en el transcurso del mismo. En su método \textit{start} se reciben \textit{inputs} de los usuarios, y se realiza una actualización de los gusanos, de la/s bala/s si existen, y de la física del juego. También actualiza el estado del juego, lo serializa y lo envía a los clientes. Se destacan los métodos \textit{onNotify}, donde se controla toda la lógica del juego (qué sucede cuando hay un disparo, una explosión, un gusano glpeado, ahogándose, muriendo, si el tiempo se terminó, etc.), \textit{playerDisconnected}, que mata a los gusanos del equipo desconectado y termina el juego si la cantidad de equipos restante es igual a uno, y \textit{endTurn}, donde se setean los parámetros necesarios para comenzar un nuevo turno.
 \end{itemize}
 
 \begin{sidewaysfigure}[!ht]
